--- a/rest-webservice/src/main/resources/application.properties
+++ b/rest-webservice/src/main/resources/application.properties
@@ -13,4 +13,4 @@ spring.datasource.username=sa
 spring.datasource.password=sa
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.use-new-id-generator-mappings=false
-spring.jpa.show-sql = true
+#spring.jpa.show-sql = true
